# FCCeePhysicsPerformance

./: .zenodo.json  README.md  index.md
DetectorPerformanceStudies/IDEAPerformanceStudies/: README.md
DetectorPerformanceStudies/IDEAPerformanceStudies/electrons/: run_production.sh
DetectorPerformanceStudies/IDEAPerformanceStudies/electrons/analysis/: analyze.py
DetectorPerformanceStudies/IDEAPerformanceStudies/electrons/generate_mac/: generate_mac.sh
General/: README.md
_includes/: toc.html
case-studies/: README.md
case-studies/BSM/: FIP  LLP  README.md
case-studies/BSM/FIP/: README.md
case-studies/BSM/FIP/masslessdarkgamma/: README.md
case-studies/BSM/LLP/: Literature.md  README.md
case-studies/BSM/LLP/ALP_NLO_UFO/: CT_couplings.py  README_ALP_fNormalization.rtf  __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  particles.py  vertices.py
case-studies/BSM/LLP/ALPs/: analysis_ALP.py  finalSel_ALPs.py  plots_ALPs.py  runAnalysis.sh
case-studies/BSM/LLP/ALPs/ALP_sample_creation/: ALP_pythia.cmnd  runPythiaDephies.sh
case-studies/BSM/LLP/DisplacedHNL/: README.md  analysis_HNL_read.py  analysis_general.py  doPlots.py  finalSel.py  finalSel_general.py  gen_distributions_delphes.py  myFCCee_procDict_spring2021_IDEA.json  plots.py  plots_general.py  runAnalysis.sh  runAnalysis_general.sh  setup_instructions
case-studies/BSM/LLP/DisplacedHNL/HNL_sample_creation/: HNL_eenu_pythia.cmnd  HNL_pythia.cmnd  Readme.txt  edm4hep_output_config.tcl
case-studies/LLP/: README.md
case-studies/QCD/: README.md
case-studies/flavour/: README.md
case-studies/flavour/Bc2TauNu/: README.md  analyse_toys.py  calc_BFs.py  compare_Bc2TauNu_InclusiveZ.py  decay_mode_xs.py  estimate_purity.py  exclusive_bkg_summary_table.py  fit_MVA_dists.py  make_selected_samples_for_templates.py  make_signal_yield_table.py  make_vertex_hist_plots.py  make_yield_BF_summary_tables.py  plot_max_hem_E.py  plot_xgb.py  plot_xgb_stage2.py  processB2TauNu.py  processInclusiveZ.py  process_sig_bkg_samples_for_xgb.py  template_fit.py  train_xgb.py  train_xgb_stage2.py  userConfig.py  xgb_mva.py
case-studies/flavour/Bd2KstTauTau/: runAnalysis.py  userConfig.py
case-studies/flavour/Bs2JPsiPhi/: CMakeLists.txt  README.md  analysis_B2TauNu.py  analysis_Bs2DsK.py  analysis_Bs2JPsiPhi.py  localSetup.sh
case-studies/flavour/Bs2JPsiPhi/analyzers/dataframe/: Bs2JPsiPhi.cc  Bs2JPsiPhi.h  CMakeLists.txt
case-studies/flavour/BuBc2TauNu/: README.md  bkg_eff_MVA_spline.py  bkg_eff_compare_incl_and_excl.py  bkg_eff_decide_baseline_sel.py  bkg_eff_make_tight_sel.py  check_sig_shape_variation.py  decay_mode_xs.py  double_sided_gaussian.py  estimate_purity.py  final_sel_estimate_purity.py  final_sel_pretrim_signal.py  fit_MVA_dists.py  fit_multidim_simultaneous_template.py  fit_simultaneous_template.py  fit_test_sig_shape_uncert.py  make_selected_samples_for_templates.py  overtrain_test_stage1.py  overtrain_test_stage2.py  plot_bdt_vars_stage1.py  plot_bdt_vars_stage2.py  plot_cat_decision.py  plot_vars_bdt.py  plot_xgb.py  plot_xgb_stage2.py  process_sig_bkg_samples_for_xgb.py  simultaneous_template_fit.py  study_toy_stats.py  survey_exclusive_modes.py  toy_plot_summary.py  toy_study_stats.py  train_xgb.py  train_xgb_stage2.py  userConfig.py
case-studies/flavour/VertexExamples/: README.md  analysis_B2TauNu.py  analysis_Bd2Ksttautau.py  analysis_Bs2DsK.py  analysis_Bs2JPsiPhi.py  plots_B2TauNu.py  plots_Bd2Ksttautau.x  plots_Bs2DsK.x  plots_Bs2JsiPhi.x
case-studies/flavour/cpv/: README.md
case-studies/flavour/dataframe/: CMakeLists.txt  README.md
case-studies/flavour/dataframe/analyzers/: Bs2DsK.cc  Bs2DsK.h  Bs2JPsiPhi.cc  Bs2JPsiPhi.h  CMakeLists.txt  LinkDef.h  dummyLoaderFlavour.cc  dummyLoaderFlavour.h
case-studies/flavour/tools/: README.md  install.sh  localSetup.sh
case-studies/flavour/tools/python/: locations.py  plotting.py  utils.py
case-studies/higgs/: README.md
case-studies/higgs/ZH-crosssection/: README.md
case-studies/higgs/dataframe/: CMakeLists.txt  README.md  localSetup.sh
case-studies/higgs/dataframe/analyzers/: APCHiggsTools.cc  APCHiggsTools.h  CMakeLists.txt  LinkDef.h  ReconstructedParticle_caseStudy_mHRecoil.cc  ReconstructedParticle_caseStudy_mHRecoil.h  dummyLoaderHiggs.cc  dummyLoaderHiggs.h
case-studies/higgs/dataframe/cmake/: FindVdt.cmake
case-studies/higgs/eeh/: README.md
case-studies/higgs/hcc/: README.md
case-studies/higgs/hzgamma/: README.md
case-studies/higgs/invisible/: README.md
case-studies/higgs/mH-bbqq/: README.md
case-studies/higgs/mH-recoil/: README.md  job.sh  massFit.py  training_sub.cfg
case-studies/higgs/mH-recoil/FCCAnalyses-config/APC/: analysis.py  analysis_without_yaml.py  finalSel.py  fit_dev.py  preSel.py
case-studies/higgs/tools/: install.sh
case-studies/higgs/tools/python/: BDT_Tools.py  kinematics_flat.py  plotting.py  utils.py
case-studies/higgs/width-bbnunu/: README.md
case-studies/higgs/width-zzz/: README.md
case-studies/lineshape/: AFBbb.md  AFBmumu.md  README.md  rl.md  sigma_had.md  zwidth.md
case-studies/lineshape/AFBbb/: README.md
case-studies/lineshape/AFBmumu/: README.md
case-studies/lineshape/Znuenue/: README.md
case-studies/lineshape/rl/: README.md
case-studies/lineshape/sigma_had/: README.md
case-studies/lineshape/zwidth/: README.md
case-studies/taus/: README.md
case-studies/taus/leptonicbranchings/: README.md
case-studies/taus/lifetime/: README.md
case-studies/taus/mass/: README.md
case-studies/taus/polarisation/: README.md
case-studies/top/: README.md
case-studies/top/dataframe/: CMakeLists.txt  README.md  README.md~  localSetup.sh
case-studies/top/dataframe/analyzers/: CMakeLists.txt  CMakeLists.txt~  LinkDef.h  dummyLoaderTop.cc  dummyLoaderTop.h
case-studies/top/electroweak-couplings/: README.md
case-studies/top/fcnc/: README.md
case-studies/top/mass-width/: README.md
case-studies/ww/: README.md
case-studies/ww/Znuenue/: README.md
case-studies/ww/mass/: README.md
case-studies/ww/radiativereturn/: README.md
(+31 files in other folders)
